--- a/index.html
+++ b/index.html
@@ -1,12 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <script src="script.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Test</title>
+        <link rel="stylesheet" href="reset.css" />
+        <link rel="stylesheet" href="styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <aside>
+            <header class="header">
+                <img src="" alt="" class="header__logo" />
+                <h1 class="header__title">
+                    Dashboard<span class="header__title--small"> v.01</span>
+                </h1>
+            </header>
+            <nav class="navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__item navigation__item--active">
+                        <img src="" alt="" class="navigation__icon" />
+                        <p class="navigation__text"></p>
+                    </li>
+                    <li class="navigation__item">
+                        <img src="" alt="" class="navigation__icon" />
+                        <p class="navigation__text"></p>
+                    </li>
+                    <li class="navigation__item">
+                        <img src="" alt="" class="navigation__icon" />
+                        <p class="navigation__text"></p>
+                    </li>
+                    <li class="navigation__item">
+                        <img src="" alt="" class="navigation__icon" />
+                        <p class="navigation__text"></p>
+                    </li>
+                    <li class="navigation__item">
+                        <img src="" alt="" class="navigation__icon" />
+                        <p class="navigation__text"></p>
+                    </li>
+                    <li class="navigation__item">
+                        <img src="" alt="" class="navigation__icon" />
+                        <p class="navigation__text"></p>
+                    </li>
+                </ul>
+            </nav>
+            <section class="profile">
+                <img src="" alt="" class="profile__avatar" />
+                <div class="profile__info">
+                    <p class="profile__name">Evano</p>
+                    <p class="profile__position">Project Manager</p>
+                </div>
+            </section>
+        </aside>
+
+        <main class="main">
+            <h3 class="main__header">Hello Evano&#x1F44B;,</h3>
+            <section class="customers">
+                <div class="customers__header">
+                    <div class="customers__info">
+                        <h3 class="customers__title"></h3>
+                        <p class="customers__subtitle"></p>
+                    </div>
+                    <input type="text" class="customers__search" />
+                </div>
+                <table class="customers__table">
+                    <th class="customers__th">Customer Name</th>
+                    <th class="customers__th">Company</th>
+                    <th class="customers__th">Phone Number</th>
+                    <th class="customers__th">Email</th>
+                    <th class="customers__th">Country</th>
+                    <th class="customers__th">Status</th>
+
+                    <tr class="customers__tr">
+                        <td class="customers__td">Jane Cooper</td>
+                        <td class="customers__td">Microsoft</td>
+                        <td class="customers__td">(225) 555-0118</td>
+                        <td class="customers__td">jane@microsoft.com</td>
+                        <td class="customers__td">United States</td>
+                        <td class="customers__td--status">Active</td>
+                    </tr>
+                </table>
+                <section class="customers__pagination">
+                    <p class="customers__text">
+                        Showing data 1 to 8 of 256K entries
+                    </p>
+                    <div class="customers__buttons">
+                        <button class="customers__button--prev">&lt;</button>
+                        <button class="customers__button">1</button>
+                        <button class="customers__button">2</button>
+                        <button class="customers__button">3</button>
+                        <button class="customers__button">4</button>
+                        <p>...</p>
+                        <button class="customers__button">40</button>
+                        <button class="customers__button--next">&gt;</button>
+                    </div>
+                </section>
+            </section>
+        </main>
+
+        <script src="script.js"></script>
+    </body>
 </html>
