Styled: aside bar

--- a/index.html
+++ b/index.html
@@ -16,41 +16,102 @@
     <body>
         <aside>
             <header class="header">
-                <img src="" alt="" class="header__logo" />
-                <h1 class="header__title">
-                    Dashboard<span class="header__title--small"> v.01</span>
-                </h1>
+                <img
+                    src="assets/images/header_logo.png"
+                    alt="logo"
+                    class="header__logo"
+                />
+                <h1 class="header__title">Dashboard</h1>
+                <span class="header__title--small"> v.01</span>
             </header>
             <nav class="navigation">
                 <ul class="navigation__list">
+                    <li class="navigation__item">
+                        <img
+                            src="assets/images/key-square.png"
+                            alt="nav-icon"
+                            class="navigation__icon"
+                        />
+                        <p class="navigation__text">Dashboard</p>
+                        <img
+                            src="assets/images/arrow.png"
+                            alt="arrow"
+                            class="navigation__arrow"
+                        />
+                    </li>
+                    <li class="navigation__item">
+                        <img
+                            src="assets/images/square.png"
+                            alt="nav-icon"
+                            class="navigation__icon"
+                        />
+                        <p class="navigation__text">Product</p>
+                        <img
+                            src="assets/images/arrow.png"
+                            alt="arrow"
+                            class="navigation__arrow"
+                        />
+                    </li>
                     <li class="navigation__item navigation__item--active">
-                        <img src="" alt="" class="navigation__icon" />
-                        <p class="navigation__text"></p>
+                        <img
+                            src="assets/images/user-square.png"
+                            alt="nav-icon"
+                            class="navigation__icon"
+                        />
+                        <p class="navigation__text">Customers</p>
+                        <img
+                            src="assets/images/arrow.png"
+                            alt="arrow"
+                            class="navigation__arrow"
+                        />
                     </li>
                     <li class="navigation__item">
-                        <img src="" alt="" class="navigation__icon" />
-                        <p class="navigation__text"></p>
+                        <img
+                            src="assets/images/wallet-money.png"
+                            alt="nav-icon"
+                            class="navigation__icon"
+                        />
+                        <p class="navigation__text">Income</p>
+                        <img
+                            src="assets/images/arrow.png"
+                            alt="arrow"
+                            class="navigation__arrow"
+                        />
                     </li>
                     <li class="navigation__item">
-                        <img src="" alt="" class="navigation__icon" />
-                        <p class="navigation__text"></p>
+                        <img
+                            src="assets/images/discount-shape.png"
+                            alt="nav-icon"
+                            class="navigation__icon"
+                        />
+                        <p class="navigation__text">Promote</p>
+                        <img
+                            src="assets/images/arrow.png"
+                            alt="arrow"
+                            class="navigation__arrow"
+                        />
                     </li>
                     <li class="navigation__item">
-                        <img src="" alt="" class="navigation__icon" />
-                        <p class="navigation__text"></p>
-                    </li>
-                    <li class="navigation__item">
-                        <img src="" alt="" class="navigation__icon" />
-                        <p class="navigation__text"></p>
-                    </li>
-                    <li class="navigation__item">
-                        <img src="" alt="" class="navigation__icon" />
-                        <p class="navigation__text"></p>
+                        <img
+                            src="assets/images/message-question.png"
+                            alt="nav-icon"
+                            class="navigation__icon"
+                        />
+                        <p class="navigation__text">Help</p>
+                        <img
+                            src="assets/images/arrow.png"
+                            alt="arrow"
+                            class="navigation__arrow"
+                        />
                     </li>
                 </ul>
             </nav>
             <section class="profile">
-                <img src="" alt="" class="profile__avatar" />
+                <img
+                    src="assets/images/avatar.png"
+                    alt="avatar"
+                    class="profile__avatar"
+                />
                 <div class="profile__info">
                     <p class="profile__name">Evano</p>
                     <p class="profile__position">Project Manager</p>
